<resources>
    <string name="app_name">위시의 위치</string>

    <!--  xml에서 사용하는 string -->
    <string name="title">title</string>
    <string name="address">address</string>
    <string name="to_map_setting">지도검색</string>
    <string name="to_api_setting">매장검색</string>
    <string name="setting_location">위치설정</string>
    <string name="setting">SETTING</string>
    <string name="new_list">NEW\nWISH LIST</string>
    <string name="wish">WISH </string>
    <string name="todo">WISH\nLIST</string>
    <string name="folder">폴더</string>
    <string name="folder_eng">FOLDER</string>
    <string name="add_folder">폴더 이름 입력</string>
    <string name="select_folder">폴더선택</string>
    <string name="input_folder"> 추가할 폴더 이름을 입력해주세요 </string>
    <string name="input_todo"> Wish List를 입력해주세요</string>
    <string name="input_where"> 알람이 울릴 지점을 선택해주세요 </string>
    <string name="setting_push">알림</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="name_text">이름</string>
    <string name="input_address">이동할 주소를 입력해주세요</string>
    <string name="radius">알림반경</string>
    <string name="meter">200M</string>
    <string name="name">너구리</string>
    <string name="dialog_title">Delete Item</string>
    <string name="dialog_folder">Delete Folder</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="ok_eng">OK</string>
    <string name="cancel_eng">CANCEL</string>
    <string name="to_save">저장하기</string>
    <string name="saved">저장되었습니다 </string>
    <string name="folder_default0">기본 폴더</string>
    <string name="folder_default1">사야할 것</string>
    <string name="folder_default2">해야할 것</string>
    <string name="folder_default3">봐야할 것</string>
    <string name="same_folder">이미 같은 이름의 폴더가 있습니다</string>
    <string name="backup">Backup Completed</string>
    <string name="canceled">취소되었습니다 </string>
    <string name="restore">Restore Completed</string>
    <string name="sub_title">MODIFY\nWISH</string>
    <string name="completed_ok">수행 완료</string>
    <string name="completed_no">수행 이전</string>
    <string name="restore_data">데이터 복원</string>
    <string name="all">모두 보기</string>
    <string name="move_marker">마커를 움직여 위치를 조정해주세요</string>
    <string name="backup_short">backup</string>
    <string name="restore_short">restore</string>
    <string name="license">license</string>
    <string name="license_name">오픈소스 라이선스</string>
    <string name="input_wish">수행할 wish list의 내용을 입력해주세요</string>
    <string name="menu_edit">수정</string>
    <string name="menu_delete">삭제</string>
    <string name="different_place">다른 장소를 입력해주세요 </string>
    <string name="input_search">검색어를 입력해주세요</string>
    <string name="is_empty"> 할 일을 새로 입력해주세요!</string>
    <string name="new_folder">새로운 폴더 추가</string>
    <string name="backup_message">\n현재 데이터를 서버에 저장하시겠습니까</string>
    <string name="restore_message">복구하시겠습니까 \n이전의 데이터는 지워집니다.</string>

    <!-- 액티비티 라벨 이름-->
    <string name="label_new_activity">추가하기</string>
    <string name="label_setting">설정하기</string>
    <string name="label_license">라이선스</string>
    <string name="label_detail">상세보기</string>
    <string name="label_edit">수정하기</string>


    <!-- 퍼미션 관련 -->
    <string name="permission_rationale">어플리케이션 기능 상 위치 정보 접근이 필요합니다.</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">어플리케이션 기능 상 위치 정보 접근이 필수적입니다. 설정해주세요  </string>

    <!-- 지오펜스 서비스에서 사용 -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        TODO List를 수행해주세요! 누르면 앱으로 돌아갑니다!
    </string>

    <string name="geofences_added"> Geofence add </string>
    <string name="geofences_removed"> Geofence remove </string>

    <string name="license1">https://github.com/googlesamples/android-play-location/tree/master/Geofencing </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_ok">Save</string>



</resources>
