<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="project.boostcamp.final_project.UI.Setting.SettingActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include
            layout="@layout/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="46dp" />
    </FrameLayout>

    <TextView
        android:text="@string/setting"
        android:textColor="@color/click_back"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:id="@+id/setting_text"
        android:textSize="22sp"
        android:gravity="center_vertical|center_horizontal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:text="@string/setting_push" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/Widget.AppCompat.Button.Borderless.Colored"
           android:text="@string/on"
           android:layout_marginStart="30dp"
           android:textSize="14sp"
           android:id="@+id/on"
           android:textColor="@color/gray"/>

        <Switch
            android:id="@+id/switchBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/off"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/off"
            android:textSize="14sp"
            android:textColor="@color/click_back"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/radiusBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:max="1000"
            android:progress="300" />

        <TextView
            android:id="@+id/radiusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/radiusBar"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/radiusBar"
            android:text="@string/meter"
            android:textColor="@color/gray" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:text="@string/restore_data"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/to_backup"
            android:onClick="settingClick"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/white"
            android:text="@string/backup_short"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/get_data"
            android:onClick="settingClick"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/white"
            android:layout_marginStart="30dp"
            android:text="@string/restore_short"/>

    </LinearLayout>

</LinearLayout>
