<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_new_wish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include
            android:layout_height="46dp"
            android:layout_width="match_parent"
            layout="@layout/tool_bar"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/sut_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/new_list"
            android:textColor="@color/click_back"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/todo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="38dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxEms="20"
            android:padding="20dp"
            android:text=""
            android:textSize="14sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/folder_explain"
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="51dp"
                android:gravity="center"
                android:src="@drawable/folder_icon" />

            <Button
                android:id="@+id/folder"
                android:layout_width="141dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:background="@drawable/folder_select"
                android:text="@string/select_folder"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gps_setting"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:src="@drawable/ic_location" />

            <Button
                android:id="@+id/to_search"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/to_api_setting"
                android:textColor="@color/gray"
                android:textSize="13sp" />

            <Button
                android:id="@+id/to_map"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/to_map_setting"
                android:textColor="@color/gray"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/clock"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:src="@drawable/ic_alarm" />

            <Button
                android:id="@+id/on"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/on"
                android:textColor="@color/click_back"
                android:textSize="13sp" />

            <Button
                android:id="@+id/off"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/off"
                android:textColor="@color/gray"
                android:textSize="13sp" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>